fixed z-index on header

--- a/src/shared/components/Layout/HeaderComponent/HeaderComponent.module.scss
+++ b/src/shared/components/Layout/HeaderComponent/HeaderComponent.module.scss
@@ -2,6 +2,7 @@
 
 .header {
   position: sticky;
+  z-index: 10;
   top: 0;
   display: flex;
   align-items: center;
